--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"require": {
 		"ext-gd": "*",
 		"ext-mbstring": "*",
-		"silverstripe/docsviewer": "dev-master",
+		"silverstripe/docsviewer": "^1.3",
 		"silverstripe/framework": "^3.2",
 		"silverstripe/toolbar": "^4.0"
 	},
